test/units/TypingSpec/valid/prog/fun-align-multi-tabs.algst
foo : ∀(a:TL). ∀(b:TU). a -> b -o a
foo [a,b] a b = a
